style.css
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

.content {
  min-height: 100vh;
  min-width: 100vw;
  background: linear-gradient(#0077b6, #90e0ef);
}

.search {
  height: 15vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

.search input {
  border: none;
  border-radius: 3px;
  height: 2rem;
  width: 50vw;
  margin: 0 1rem;
}

.search button {
  border: none;
  border-radius: 5px;
  background-color: rgb(0 0 0/ 15%);
  color: white;
  height: 2rem;
  width: 4rem;
}

section {
  display: grid;
}

.grid {
  display: grid;
  grid-template-columns: 1fr;
  justify-content: center;
  grid-row-gap: 2rem;
}

section h1 {
  margin: 0 3rem 3rem;
  font-size: 3rem;
  color: #ffffff;
  text-align: center;
  letter-spacing: 2px;
}

.current {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  text-align: center;
  margin: 0 auto;
  color: #ffffff;
  background-color: rgb(0 0 0 / 10%);
  padding: 1rem;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.current-box {
  display: flex;
  flex-direction: column;
  grid-column: 1 / span 3;
  grid-row: 2 / 3;
  gap: 1rem;
}

.current-temp {
  font-size: 10rem;
}

.current-feels-like {
  font-size: 1.5rem;
}

.week-temps {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, min-content));
  justify-content: space-evenly;
}

.week-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #ffffff;
  background-color: rgb(0 0 0 / 10%);
  padding: 1rem;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

@media only screen and (max-width: 600px) {
  .search input {
    width: 50vw;
  }
}

